--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import CTFForm from "../components/CTFForm.astro";
   <Pilares />
   <CTF />
   <Speakers />
-  <!-- <Agenda /> -->
+  <Agenda />
   <Hub />
   <Campus />
   <Audiencia />
