--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -82,7 +82,7 @@ import Section from "../components/Section.astro";
               type="Ponencia"
               time="11:00 - 12:00 (1h)"
             >
-              <p class="text-slate-500">Jose Romero Salvador</p>
+              <p class="text-slate-500">Jose Romero (Sector Asegurador)</p>
             </Event>
           </td>
           <td></td>
@@ -102,9 +102,7 @@ import Section from "../components/Section.astro";
               type="Ponencia"
               time="11:30 - 12:15 (45mins)"
             >
-              <p class="text-slate-500">
-                AristiDevs (Mobile Tech Lead & Content Creator)
-              </p>
+              <p class="text-slate-500">Arístides Guimera (AristiDevs)</p>
             </Event>
           </td>
           <td rowspan="18">
@@ -155,7 +153,9 @@ import Section from "../components/Section.astro";
               type="Ponencia"
               time="12:30 - 13:30 (1h)"
             >
-              <p class="text-slate-500">Enrique Poblado</p>
+              <p class="text-slate-500">
+                Enrique Poblador (Ejercito de tierra)
+              </p>
             </Event>
           </td>
         </tr>
@@ -334,7 +334,7 @@ import Section from "../components/Section.astro";
               type="Ponencia"
               time="18:00 - 18:45 (45mins)"
             >
-              <p class="text-slate-500">David Marugán</p>
+              <p class="text-slate-500">David Marugán (Titanium)</p>
             </Event>
           </td>
           <td></td>
