--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -272,7 +272,7 @@ import Section from "../components/Section.astro";
               type="Taller"
               time="16:15 - 17:15 (1h)"
             >
-              <p class="text-slate-500">Raúl Marín</p>
+              <p class="text-slate-500">Raúl Marín (Shift+R Lab)</p>
             </Event>
           </td>
           <td></td>
@@ -331,7 +331,7 @@ import Section from "../components/Section.astro";
           <td rowspan="3">
             <Event
               title="Russia-Ukraine Radio Warfare"
-              type="Ponencia"
+              type="Ponencia presencial"
               time="18:00 - 18:45 (45mins)"
             >
               <p class="text-slate-500">David Marugán (Titanium)</p>
