Update agenda and add footer logos

--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -113,8 +113,11 @@ import Section from "../components/Section.astro";
             >
               <p class="text-slate-500">secur0 - INCIBE</p>
               <ul class="text-sm">
-                <li>PREMIO 1: 50% beca Máster online en Ciberseguridad</li>
-                <li>PREMIO 2: RayBan Meta Wayfarer (Gen 1)</li>
+                <li>
+                  PREMIO 1: RayBan Meta Wayfarer (Gen 1) + 50% beca Máster
+                  online en Ciberseguridad
+                </li>
+                <li>PREMIO 2: 50% beca Máster online en Ciberseguridad</li>
                 <li>PREMIO 3: Certificación Comptia - Ethical Hacker Pro</li>
               </ul>
             </Event>
@@ -290,8 +293,11 @@ import Section from "../components/Section.astro";
               time="11:30 - 18:00 (5h y 30mins)"
             >
               <ul class="text-sm">
-                <li>PREMIO 1: 50% beca Máster online en Ciberseguridad</li>
-                <li>PREMIO 2: RayBan Meta Wayfarer (Gen 1)</li>
+                <li>
+                  PREMIO 1: RayBan Meta Wayfarer (Gen 1) + 50% beca Máster
+                  online en Ciberseguridad
+                </li>
+                <li>PREMIO 2: 50% beca Máster online en Ciberseguridad</li>
                 <li>PREMIO 3: Certificación Comptia - Ethical Hacker Pro</li>
               </ul>
             </Event>
