--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -107,7 +107,7 @@ import Section from "../components/Section.astro";
           </td>
           <td rowspan="18">
             <Event
-              title="Sala hacker - secur0"
+              title="Sala hacker"
               type="CTF"
               time="11:30 - 18:00 (5h y 30mins)"
             >
@@ -288,7 +288,7 @@ import Section from "../components/Section.astro";
           <td>16:45 - 17:00h.</td>
           <td rowspan="5">
             <Event
-              title="Sala hacker - secur0"
+              title="Sala hacker"
               type="CTF"
               time="11:30 - 18:00 (5h y 30mins)"
             >
