--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -114,11 +114,15 @@ import Section from "../components/Section.astro";
               <p class="text-slate-500">secur0 - INCIBE</p>
               <ul class="text-sm">
                 <li>
-                  PREMIO 1: RayBan Meta Wayfarer (Gen 1) + 50% beca Máster
-                  online en Ciberseguridad
+                  1<sup>er</sup> premio: RayBan Meta Wayfarer (Gen 1) + 50% beca
+                  Máster online en Ciberseguridad
                 </li>
-                <li>PREMIO 2: 50% beca Máster online en Ciberseguridad</li>
-                <li>PREMIO 3: Certificación Comptia - Ethical Hacker Pro</li>
+                <li>
+                  2<sup>o</sup> premio: 50% beca Máster online en Ciberseguridad
+                </li>
+                <li>
+                  3<sup>er</sup> premio: Certificación Comptia - Ethical Hacker Pro
+                </li>
               </ul>
             </Event>
           </td>
@@ -294,11 +298,15 @@ import Section from "../components/Section.astro";
             >
               <ul class="text-sm">
                 <li>
-                  PREMIO 1: RayBan Meta Wayfarer (Gen 1) + 50% beca Máster
-                  online en Ciberseguridad
+                  1<sup>er</sup> premio: RayBan Meta Wayfarer (Gen 1) + 50% beca
+                  Máster online en Ciberseguridad
                 </li>
-                <li>PREMIO 2: 50% beca Máster online en Ciberseguridad</li>
-                <li>PREMIO 3: Certificación Comptia - Ethical Hacker Pro</li>
+                <li>
+                  2<sup>o</sup> premio: 50% beca Máster online en Ciberseguridad
+                </li>
+                <li>
+                  3<sup>er</sup> premio: Certificación Comptia - Ethical Hacker Pro
+                </li>
               </ul>
             </Event>
           </td>
