Add incibe logos

--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -270,6 +270,7 @@ import Section from "../components/Section.astro";
               time="16:00 - 16:45 (45mins)"
             />
           </td>
+          <td></td>
         </tr>
         <tr>
           <td>16:15 - 16:30h.</td>
@@ -297,6 +298,7 @@ import Section from "../components/Section.astro";
               time="11:30 - 18:00 (5h y 30mins)"
             />
           </td>
+          <td></td>
         </tr>
         <tr>
           <td>17:00 - 17:15h.</td>
@@ -306,18 +308,26 @@ import Section from "../components/Section.astro";
         <tr>
           <td>17:15 - 17:30h.</td>
           <td></td>
-          <td></td>
+          <td rowspan="3">
+            <Event
+              title="Cómo construir tu carrera cuando la IA también escribe código"
+              type="Ponencia"
+              time="17:15 - 18:00 (45mins)"
+            >
+              <p class="text-slate-500">
+                Ángela Alvarez (People Director en HP)
+              </p>
+            </Event>
+          </td>
           <td></td>
         </tr>
         <tr>
           <td>17:30 - 17:45h.</td>
           <td></td>
           <td></td>
-          <td></td>
         </tr>
         <tr>
           <td>17:45 - 18:00h.</td>
-          <td></td>
           <td></td>
           <td></td>
         </tr>
@@ -338,6 +348,7 @@ import Section from "../components/Section.astro";
               <p class="text-slate-500">David Marugán (Titanium)</p>
             </Event>
           </td>
+          <td></td>
           <td></td>
         </tr>
         <tr>
