--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -105,7 +105,7 @@ import Section from "../components/Section.astro";
               <p class="text-slate-500">Arístides Guimera (AristiDevs)</p>
             </Event>
           </td>
-          <td rowspan="18">
+          <td rowspan="11">
             <Event
               title="Sala hacker"
               type="CTF"
@@ -201,21 +201,18 @@ import Section from "../components/Section.astro";
         </tr>
         <tr>
           <td>14:15 - 14:30h.</td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td rowspan="3">
+            <Event title="Almuerzo" time="14:15 - 15:00 (45mins)" />
+          </td>
+          <td rowspan="4" colspan="3">
+            <Event title="Almuerzo" time="14:15 - 15:15 (1h)" />
+          </td>
         </tr>
         <tr>
           <td>14:30 - 14:45h.</td>
-          <td></td>
-          <td></td>
-          <td></td>
         </tr>
         <tr>
           <td>14:45 - 15:00h.</td>
-          <td></td>
-          <td></td>
-          <td></td>
         </tr>
         <tr>
           <td>15:00 - 15:15h.</td>
@@ -230,12 +227,17 @@ import Section from "../components/Section.astro";
               </p>
             </Event>
           </td>
-          <td></td>
-          <td></td>
         </tr>
         <tr>
           <td>15:15 - 15:30h.</td>
           <td></td>
+          <td rowspan="3">
+            <Event
+              title="Sala hacker"
+              type="CTF"
+              time="15:15 - 16:00 (45mins)"
+            />
+          </td>
           <td></td>
         </tr>
         <tr>
