Fix sala hacker time

--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -236,7 +236,7 @@ import Section from "../components/Section.astro";
             <Event
               title="Sala hacker"
               type="CTF"
-              time="15:15 - 16:00 (45mins)"
+              time="11:30 - 18:00 (5h y 30mins)"
             />
           </td>
           <td></td>
