--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -3,7 +3,7 @@ import Event from "../components/Event.astro";
 import Section from "../components/Section.astro";
 ---
 
-<Section title="Agenda" light>
+<Section id="agenda" title="Agenda" light>
   <div role="region" tabindex="0" class="container overflow-auto w-full">
     <table
       class="h-full w-full border-spacing-px border-collapse leading-normal"
