--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -161,15 +161,21 @@ import Section from "../components/Section.astro";
         </tr>
         <tr>
           <td>12:45 - 13:00h.</td>
-          <td></td>
+          <td rowspan="3">
+            <Event
+              title="Redes de Emprendimiento Digital"
+              type="Ponencia"
+              time="12:45 - 13:30 (45mins)"
+            >
+              <p class="text-slate-500">Comunidad de Madrid</p>
+            </Event>
+          </td>
         </tr>
         <tr>
           <td>13:00 - 13:15h.</td>
-          <td></td>
         </tr>
         <tr>
           <td>13:15 - 13:30h.</td>
-          <td></td>
         </tr>
         <tr>
           <td>13:30 - 13:45h.</td>
