Fix footer logos

--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -167,7 +167,10 @@ import Section from "../components/Section.astro";
               type="Ponencia"
               time="12:45 - 13:30 (45mins)"
             >
-              <p class="text-slate-500">Comunidad de Madrid</p>
+              <p class="text-slate-500">
+                David Alonso (RETECH), Elena Santana (RETECH), María Cano
+                (RETECH) y Jorge Fernández (RETECH)
+              </p>
             </Event>
           </td>
         </tr>
