--- a/src/sections/Audiencia.astro
+++ b/src/sections/Audiencia.astro
@@ -1,5 +1,4 @@
 ---
-import data from "../assets/data.json";
 import Image from "astro/components/Image.astro";
 import HubImage from "../assets/hub.webp";
 import Section from "../components/Section.astro";
@@ -14,7 +13,10 @@ import Section from "../components/Section.astro";
       </h2>
       <span>0 a 3 años</span>
       <p class="text-slate-400">
-        {data.audiencia[0]}
+        Talento Junior con su etapa formativa finalizada -o realizando posgrado-
+        que ya han tenido algunas experiencias profesionales y seguir
+        adquiriendo conocimiento en las primeras etapas de su carrera
+        profesional.
       </p>
     </div>
     <div>
@@ -24,7 +26,9 @@ import Section from "../components/Section.astro";
       </h2>
       <span>3 a 8 años</span>
       <p class="text-slate-400">
-        {data.audiencia[1]}
+        Talento Intermedio con algunos años de experiencia que desean seguir
+        creciendo en sus carreras profesionales asumiendo mayor responsabilidad
+        y nuevos desafíos tecnológicos.
       </p>
     </div>
     <div>
@@ -34,7 +38,9 @@ import Section from "../components/Section.astro";
       </h2>
       <span>8+ años</span>
       <p class="text-slate-400">
-        {data.audiencia[2]}
+        Talento Experimentado que desea elevar su nivel de responsabilidad,
+        gestionando equipos o bien a través de procesos de upskilling y
+        reskilling que les permitan situarse de forma más competitiva.
       </p>
     </div>
   </div>
