--- a/src/sections/Talento.astro
+++ b/src/sections/Talento.astro
@@ -1,17 +1,30 @@
 ---
 import Section from "../components/Section.astro";
 import BuscanTalento from "../assets/buscan_talento.webp";
-import data from "../assets/data.json";
 import Image from "astro/components/Image.astro";
 ---
 
 <Section title="Talento" subtitle="digital">
   <div class="container">
-    {
-      data.talento.map((paragraph) => (
-        <p class="max-w-prose mb-4">{paragraph}</p>
-      ))
-    }
+    <p class="max-w-prose mb-4">
+      Madrid4Tech regresa este 26 de Noviembre del 2025 en su VI edición,
+      reuniendo a las empresas líderes en tecnología y a los profesionales más
+      brillantes en un evento interactivo y dinámico.
+    </p>
+    <p class="max-w-prose mb-4">
+      Con el objetivo de forjar conexiones significativas entre empresas
+      innovadoras y talentos emergentes, este evento es una oportunidad única
+      para aquellos especializados en Data Science, Ciberseguridad, Desarrollo
+      Web, Inteligencia Artificial, Cloud Computing y Diseño UX/UI,
+      enorgulleciendonos contar con la participación de reconocidas empresas del
+      sector tecnológico, las cuales están en búsqueda activa de profesionales
+      apasionados y con ganas de transforma el futuro.
+    </p>
+    <p class="max-w-prose mb-4">
+      Estas organizaciones son pioneras en sus respectivos campos, ofreciendo no
+      solo oportunidades de empleo sino también la posibilidad de trabajar en
+      proyectos.
+    </p>
   </div>
   <Image
     src={BuscanTalento}
