--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -19,7 +19,7 @@ import data from "../assets/data.json";
       </div>
     )
   }
-  <p class="text-center mb-4">
+  <p class="text-center">
     Nos vemos este {data.date} en la <strong>{data.edition} edición</strong> de encuentro
     de talento tecnológico de Madridfortech, online y en nuestro campus en <a
       href={data.legal.address.url}
