--- a/src/sections/Pilares.astro
+++ b/src/sections/Pilares.astro
@@ -1,5 +1,4 @@
 ---
-import data from "../assets/data.json";
 import Section from "../components/Section.astro";
 ---
 
@@ -9,29 +8,23 @@ import Section from "../components/Section.astro";
   >
     <div class="flex flex-col items-center justify-center">
       <span class="text-8xl font-bold">01</span>
-      <h2 class="text-2xl font-light uppercase mb-4">
-        {data.pillars[0]}
-      </h2>
+      <h2 class="text-2xl font-light uppercase mb-4">IA y Automatización</h2>
     </div>
     <span class="w-1 h-2/4 bg-red-600 hidden lg:block"></span>
     <div class="flex flex-col items-center justify-center">
       <span class="text-8xl font-bold">02</span>
-      <h2 class="text-2xl font-light uppercase mb-4">
-        {data.pillars[1]}
-      </h2>
+      <h2 class="text-2xl font-light uppercase mb-4">Ciber guerra y defensa</h2>
     </div>
     <span class="w-1 h-2/4 bg-red-600 hidden lg:block"></span>
     <div class="flex flex-col items-center justify-center">
       <span class="text-8xl font-bold">03</span>
-      <h2 class="text-2xl font-light uppercase mb-4">
-        {data.pillars[2]}
-      </h2>
+      <h2 class="text-2xl font-light uppercase mb-4">Data y sostenibilidad</h2>
     </div>
     <span class="w-1 h-2/4 bg-red-600 hidden lg:block"></span>
     <div class="flex flex-col items-center justify-center">
       <span class="text-8xl font-bold">04</span>
       <h2 class="text-2xl font-light uppercase mb-4">
-        {data.pillars[3]}
+        Extrategia digital y UX
       </h2>
     </div>
   </div>
