Fix agenda Ángela HP

--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -326,9 +326,7 @@ import Section from "../components/Section.astro";
               type="Ponencia"
               time="17:15 - 18:00 (45mins)"
             >
-              <p class="text-slate-500">
-                Ángela Alvarez (People Director en HP)
-              </p>
+              <p class="text-slate-500">Ángela Alvarez (HP)</p>
             </Event>
           </td>
           <td></td>
