--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -164,7 +164,7 @@ import Section from "../components/Section.astro";
           <td rowspan="3">
             <Event
               title="Redes de Emprendimiento Digital"
-              type="Ponencia"
+              type="Mesa redonda"
               time="12:45 - 13:30 (45mins)"
             >
               <p class="text-slate-500">
