Delete sticky section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import CTFForm from "../components/CTFForm.astro";
   img="https://madridfortech.com/share.webp"
 >
   <Hero />
-  <Sticky />
+  <!-- <Sticky /> -->
   <Dots />
   <Talento />
   <Pilares />
