Change rooms names

--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -38,7 +38,7 @@
     if (diff < 0) {
       clearInterval(interval);
       document.getElementById("countdown").innerHTML =
-        'Enlaces a zoom: <a href="https://immune-institute.zoom.us/webinar/register/WN_xYZ-JJR2RGuIBQRi2shoxA" target="_blank">Espacio 1</a> y <a href="https://us06web.zoom.us/webinar/register/WN_antJqk3oSJSoC44V3kL4PQ" target="_blank">Espacio 2</a>';
+        'Enlaces a zoom: <a href="https://immune-institute.zoom.us/webinar/register/WN_xYZ-JJR2RGuIBQRi2shoxA" target="_blank">Ágora</a> y <a href="https://us06web.zoom.us/webinar/register/WN_antJqk3oSJSoC44V3kL4PQ" target="_blank">Aula 1</a>';
     }
   }
 
