--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -11,10 +11,10 @@ import Section from "../components/Section.astro";
       <thead>
         <tr>
           <th>HORARIO</th>
-          <th align="center" style="width: 33.333%;">ESPACIO 1</th>
-          <th align="center" style="width: 33.333%;">ESPACIO 2</th>
-          <th align="center" style="width: 33.333%;">ESPACIO 3</th>
-          <th align="center" style="width: 33.333%;">ESPACIO 4</th>
+          <th align="center" style="width: 33.333%;">Ágora</th>
+          <th align="center" style="width: 33.333%;">Aula 1</th>
+          <th align="center" style="width: 33.333%;">Aula 3</th>
+          <th align="center" style="width: 33.333%;">Aula 4</th>
         </tr>
       </thead>
       <tbody>
