--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -188,7 +188,7 @@ import Section from "../components/Section.astro";
               type="Ponencia"
               time="13:30 - 14:15 (45mins)"
             >
-              <p class="text-slate-500">Eduardo Gistau (Hibarus)</p>
+              <p class="text-slate-500">Eduardo Gistau (Hiberus)</p>
             </Event>
           </td>
           <td rowspan="2">
